# ChangeLog for net-wireless/waveselect
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/waveselect/Attic/ChangeLog,v 1.6 2009/06/28 23:33:36 halcy0n Exp $

  27 Jun 2009; Mark Loeser <halcy0n@gentoo.org> waveselect-0.1.2.ebuild,
  +files/waveselect-0.1.2-gcc43.patch:
  Add patch to fix compilation with gcc-4.3 by Tyler Cordrey <tcordrey AT
  umd DOT edu>; bug #251573

  24 Aug 2008; Michael Sterrett <mr_bones_@gentoo.org>
  waveselect-0.1.2.ebuild:
  use eapi=1 (fixes bug #233200)

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  28 Jul 2005; Caleb Tennis <caleb@gentoo.org> waveselect-0.1.2.ebuild:
  Fix qt dep per bug #100235

  01 Jul 2005; Caleb Tennis <caleb@gentoo.org> waveselect-0.1.2.ebuild:
  Fix qmake dir per bug #97535

*waveselect-0.1.2 (27 Jan 2005)

  27 Jan 2005; Stefan Schweizer <genstef@gentoo.org> +metadata.xml,
  +waveselect-0.1.2.ebuild:
  New ebuild thanks to Heath H Holcomb <xcable_hhh@yahoo.com> in bug 79656
