@@ -1,5 +1,5 @@
 AUX waveselect-0.1.2-gcc43.patch 291 RMD160 a2a32296657aa82754588f162525920b0c473ac5 SHA1 611afcc51c364a91b1303d5de3831d8435a30fc0 SHA256 1afa17fa83a64a1b144b380cb92ac05977c8811a4bcbc800184505873526e06e
 DIST waveselect-0.1.2.tar.bz2 14614 RMD160 eb408b7099f77c82dbe804f32de432be232dd924 SHA1 435d29e6748a28cd9469e8a82745e3832a39995c SHA256 4536bb4bcedfea4dd5c747a72811b29cd78c52a263391a0383468d23e201ec9c
-EBUILD waveselect-0.1.2.ebuild 885 RMD160 2bdb669776950d76df947279b4456790444bfd4d SHA1 aaa4dc7dae7da993df97e2664a4914c40ea0bc03 SHA256 d939ae6e8893ec7c8c5980f0b7593b2656ccd1790ef8d17991e69e9c96841feb
-MISC ChangeLog 1068 RMD160 6abd508e3f42da3dc43befd27bc9007f92eb6218 SHA1 6212b4e5b531c66abc7e33ffc4fee88957b7150a SHA256 35ee302b34280ce79deaab5c0e103acbecfc9ad39c245919ca4c649579dc74f1
+EBUILD waveselect-0.1.2.ebuild 846 RMD160 923917dce88a2307274ac881de11db75f1b03693 SHA1 8458e743e5c2ce6e9db91fb2d9ba588d6e5bfa5e SHA256 db43c2d2f5d03c8bfa463e506718ba3b69c4e19661e376e8e366d06813ca13a9
+MISC ChangeLog 1188 RMD160 ead69c451ac58cd680000a062d72670cfa5b700d SHA1 ada3958c1131faa5615a4468b9102b5c06e8b8cc SHA256 21ec976e3b14ef0a230c9429194f7958e1e06082d5be556c417f73a0a1994a56
 MISC metadata.xml 159 RMD160 54af1e9a61e5ed1b49b2bbbf3ef2278999c66b13 SHA1 bce3da4745192397c9a08bdbcf7e4914eac9b77b SHA256 ed3a0d440cfa5672284f4172ebde0ea6506c1a38e9a3ed9f14f3d2c093aac42f
