@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/waveselect
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/waveselect/Attic/ChangeLog,v 1.6 2009/06/28 23:33:36 halcy0n Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/waveselect/Attic/ChangeLog,v 1.7 2009/12/28 17:22:38 ssuominen Exp $
+
+  28 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
+  waveselect-0.1.2.ebuild:
+  Stop using deprecated kde.eclass.
 
   27 Jun 2009; Mark Loeser <halcy0n@gentoo.org> waveselect-0.1.2.ebuild,
   +files/waveselect-0.1.2-gcc43.patch:
